Add Android Studio preview 9 and beta1 link

--- a/index.html
+++ b/index.html
@@ -343,6 +343,76 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.1 Beta 1 -->
+                            <tr>
+                                <td rowspan="5">3.1 Beta 1</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.9/android-studio-ide-173.4567466-windows.zip">android-studio-ide-173.4567466-windows.zip</a>
+                                </td>
+                                <td>898077202 bytes</td>
+                                <td>df863d3bd4713866901c5f47f64747dbd63f3261ee3569339ac82f497bb11bd3</td>
+                                <td rowspan="5"><a href="https://ws4.sinaimg.cn/large/006tKfTcly1fo0r6mz94sj31kw0phth6.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.9/android-studio-ide-173.4567466-windows32.zip">android-studio-ide-173.4567466-windows32.zip</a>
+                                </td>
+                                <td>897547705 bytes</td>
+                                <td>a9f44fce13629896e1b16069810a3edaf606c32e641a96c93e5e80e68b164195</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.9/android-studio-ide-173.4567466-mac.zip">android-studio-ide-173.4567466-mac.dmg</a>
+                                </td>
+                                <td>897125429 bytes</td>
+                                <td>4e814e3c3a313b4c76f8c34a675d9a94b552fa4fd9369b1cd2b94972ce8cb296</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.9/android-studio-ide-173.4567466-linux.zip">android-studio-ide-173.4567466-linux.zip</a>
+                                </td>
+                                <td>896458967 bytes</td>
+                                <td>4fb1d477af23e5964b143bf0e89435a84f874cb568002e2687eb97790d518605</td>
+                            </tr>
+                            <!-- 3.1 Canary 9 -->
+                            <tr>
+                                <td rowspan="5">3.1 Canary 9</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.8/android-studio-ide-173.4559767-windows.zip">android-studio-ide-173.4559767-windows.zip</a>
+                                </td>
+                                <td>897481507 bytes</td>
+                                <td>0eaab8f29447f124cff3d24fdeda06b1228681d3a3f907a015cff7420907a25b</td>
+                                <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tKfTcly1fo0r3kwkr0j31kw0gpdm8.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.8/android-studio-ide-173.4559767-windows32.zip">android-studio-ide-173.4559767-windows32.zip</a>
+                                </td>
+                                <td>896952010 bytes</td>
+                                <td>22d5c7f2ef487a393a5d03eefda9af1833058e76affb7176940f6364f8780a06</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.8/android-studio-ide-173.4559767-mac.zip">android-studio-ide-173.4559767-mac.dmg</a>
+                                </td>
+                                <td>896529455 bytes</td>
+                                <td>92dac5fa1dadceae36617d519b14b341b62a9c0d9adb2fe1dc574d4ab5cfefab</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.8/android-studio-ide-173.4559767-linux.zip">android-studio-ide-173.4559767-linux.zip</a>
+                                </td>
+                                <td>895863246 bytes</td>
+                                <td>2087e8718a7363a6fce85180c0aebc2904f630e5d580cd30e56c6f4e1a5ec373</td>
+                            </tr>
                             <!-- 3.1 Canary 8 -->
                             <tr>
                                 <td rowspan="5">3.1 Canary 8</td>
@@ -377,111 +447,6 @@
                                 </td>
                                 <td>900340802 bytes</td>
                                 <td>a3b48c7c65f8872193ca38a939497192cb3b574cb90dd4317614b7bc7afbd355</td>
-                            </tr>
-                            <!-- 3.1 Canary 7 -->
-                            <tr>
-                                <td rowspan="5">3.1 Canary 7</td>
-                            </tr>
-                            <tr>
-                                <td rowspan="2">Windows</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.6/android-studio-ide-173.4524538-windows.zip">android-studio-ide-173.4524538-windows.zip</a>
-                                </td>
-                                <td>901303342 bytes</td>
-                                <td>3e954cd7b857b6eb6e48e52ef15616272cdb334a67eaeb9088ad92f275379fb7</td>
-                                <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tNc79ly1fn9c7typ9ej30x10g3tbz.jpg">查看</a></td>
-                            </tr>
-                            <tr>
-                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.6/android-studio-ide-173.4524538-windows32.zip">android-studio-ide-173.4524538-windows32.zip</a>
-                                </td>
-                                <td>900774565 bytes</td>
-                                <td>6b0ff2adc9dbbc3929da0c3643277e7823324874ae308649eb1b7510f4b908f7</td>
-                            </tr>
-                            <tr>
-                                <td>Mac OS X</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.6/android-studio-ide-173.4524538-mac.zip">android-studio-ide-173.4524538-mac.dmg</a>
-                                </td>
-                                <td>900345002 bytes</td>
-                                <td>7c4e81310a35554e3f9e6aeed2c84f476580f88c1165c10d6586307d288ad754</td>
-                            </tr>
-                            <tr>
-                                <td>Linux</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.6/android-studio-ide-173.4524538-linux.zip">android-studio-ide-173.4524538-linux.zip</a>
-                                </td>
-                                <td>899685278 bytes</td>
-                                <td>dc38298384e2a85590cfab179174ad3e8b206d062f819ca9b73f66c83cd74766</td>
-                            </tr>
-                            <!-- 3.1 Canary 6 -->
-                            <tr>
-                                <td rowspan="5">3.1 Canary 6</td>
-                            </tr>
-                            <tr>
-                                <td rowspan="2">Windows</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.5/android-studio-ide-173.4506631-windows.zip">android-studio-ide-173.4506631-windows.zip</a>
-                                </td>
-                                <td>934257645 bytes</td>
-                                <td>7780214adbce7520063f17892c1a8eb7f6ffa1ef85327b1f239357db2a324af2</td>
-                                <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tNc79ly1fmswz3z18uj31hl0joq6x.jpg">查看</a></td>
-                            </tr>
-                            <tr>
-                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.5/android-studio-ide-173.4506631-windows32.zip">android-studio-ide-173.4506631-windows32.zip</a>
-                                </td>
-                                <td>933728868 bytes</td>
-                                <td>373e586c6fc24dabcf261f20bc6cb0d6c51f1dd0b64f55570c70d1a65d771b85</td>
-                            </tr>
-                            <tr>
-                                <td>Mac OS X</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.5/android-studio-ide-173.4506631-mac.zip">android-studio-ide-173.4506631-mac.dmg</a>
-                                </td>
-                                <td>933279334 bytes</td>
-                                <td>a5d54319ffb78c11e3653790c752deb9d570827e5063d76fd3a008d38cc354b7</td>
-                            </tr>
-                            <tr>
-                                <td>Linux</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.5/android-studio-ide-173.4506631-linux.zip">android-studio-ide-173.4506631-linux.zip</a>
-                                </td>
-                                <td>932639587 bytes</td>
-                                <td>f60bae98d675f20dd93d6867ad8f9cbea04a87810c059ea8dfee9addf311dc83</td>
-                            </tr>
-                            <!-- 3.1 Canary 5 -->
-                            <tr>
-                                <td rowspan="5">3.1 Canary 5</td>
-                            </tr>
-                            <tr>
-                                <td rowspan="2">Windows</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.4/android-studio-ide-171.4474551-windows.zip">android-studio-ide-171.4474551-windows.zip</a>
-                                </td>
-                                <td>801440548 bytes</td>
-                                <td>874233f2cb88f32901584914da8f63fc62fdf94b1e0fe37cd09622b96e664833</td>
-                                <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tKfTcly1flfltqo9vsj31kw0qsqal.jpg">查看</a></td>
-                            </tr>
-                            <tr>
-                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.4/android-studio-ide-171.4474551-windows32.zip">android-studio-ide-171.4474551-windows32.zip</a>
-                                </td>
-                                <td>800911771 bytes</td>
-                                <td>f9e6499d141cf7d830d7c8081611b54e90ed90c2d1190a792b640ff1f8ea7405</td>
-                            </tr>
-                            <tr>
-                                <td>Mac OS X</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.4/android-studio-ide-171.4474551-mac.zip">android-studio-ide-171.4474551-mac.dmg</a>
-                                </td>
-                                <td>800931688 bytes</td>
-                                <td>fe1e8ae2dd8e391971cc336fdd262f31313fd0125e894f00d2ae959d4aa196eb</td>
-                            </tr>
-                            <tr>
-                                <td>Linux</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.4/android-studio-ide-171.4474551-linux.zip">android-studio-ide-171.4474551-linux.zip</a>
-                                </td>
-                                <td>799906015 bytes</td>
-                                <td>4028ee5e2718637c370328234f6b9837fbc14ec57d90b1a40498a87ccc0dff65</td>
                             </tr>
                             <!-- 3.0.1 正式版 -->
                             <tr>
