Add Android Studio 3.2 Canary 1 Link

--- a/index.html
+++ b/index.html
@@ -343,6 +343,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.2 Canary 1 -->
+                            <tr>
+                                <td rowspan="5">3.2 Canary 1</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.0/android-studio-ide-173.4572754-windows.zip">android-studio-ide-173.4572754-windows.zip</a>
+                                </td>
+                                <td>913065952 bytes</td>
+                                <td>a90033817c66c0b896e76bacafd274b1f0e99abce7c63ca1f853400c02cb8921</td>
+                                <td rowspan="5"><a href="https://ws4.sinaimg.cn/large/006tKfTcly1fo29kc7y2cj31kw0sc11s.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.0/android-studio-ide-173.4572754-windows32.zip">android-studio-ide-173.4572754-windows32.zip</a>
+                                </td>
+                                <td>912536455 bytes</td>
+                                <td>fd16e12164c8324c05025672b19e6e0e929c20479e559a41455b1ecbbfcdea5b</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.0/android-studio-ide-173.4572754-mac.zip">android-studio-ide-173.4572754-mac.dmg</a>
+                                </td>
+                                <td>912120167 bytes</td>
+                                <td>cec7245e50487e577cc4369cf23142f2dcf8555e27d62758175e281af1541dbf</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.0/android-studio-ide-173.4572754-linux.zip">android-studio-ide-173.4572754-linux.zip</a>
+                                </td>
+                                <td>911447730 bytes</td>
+                                <td>37762f80cabe5990ef5a5f956bd78f16d6a97dd22e2374339efa8da4e6ffce17</td>
+                            </tr>
                             <!-- 3.1 Beta 1 -->
                             <tr>
                                 <td rowspan="5">3.1 Beta 1</td>
