--- a/index.html
+++ b/index.html
@@ -343,6 +343,76 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.2 Canary 2 -->
+                            <tr>
+                                <td rowspan="5">3.2 Canary 2</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.1/android-studio-ide-173.4591728-windows.zip">android-studio-ide-173.4591728-windows.zip</a>
+                                </td>
+                                <td>920645008 bytes</td>
+                                <td>d1402271c90b520ed13b440e8cc9750f531810243aad829c7a1362e46b5dffba</td>
+                                <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tKfTcly1fobimqe5gnj31kw0gw0yt.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.1/android-studio-ide-173.4591728-windows32.zip">android-studio-ide-173.4591728-windows32.zip</a>
+                                </td>
+                                <td>920115511 bytes</td>
+                                <td>7950f13faece0fe367f9fad235dac270d1e0d6be68baab34c22aa97672ae232d</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.1/android-studio-ide-173.4591728-mac.zip">android-studio-ide-173.4591728-mac.dmg</a>
+                                </td>
+                                <td>919733505 bytes</td>
+                                <td>9593a9df029910413ea7f4674c511929f1811eb2d28bb248bee6b0d71e68c62f</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.1/android-studio-ide-173.4591728-linux.zip">android-studio-ide-173.4591728-linux.zip</a>
+                                </td>
+                                <td>919026767 bytes</td>
+                                <td>d4fd7ae0dc9dc839aa83a86e278bba8fe62802c9036f5608e51a9bc32fdcbd6f</td>
+                            </tr>
+                            <!-- 3.1 Beta 2 -->
+                            <tr>
+                                <td rowspan="5">3.1 Beta 2</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.10/android-studio-ide-173.4580418-windows.zip">android-studio-ide-173.4580418-windows.zip</a>
+                                </td>
+                                <td>898144032 bytes</td>
+                                <td>7abaed20c5b0f34876dde5ece11794daced97bc793dbf2b4bc5e9c252f09e00d</td>
+                                <td rowspan="5"><a href="https://ws2.sinaimg.cn/large/006tKfTcly1fobimdlyu3j31kw0hjtf4.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.10/android-studio-ide-173.4580418-windows32.zip">android-studio-ide-173.4580418-windows32.zip</a>
+                                </td>
+                                <td>897614535 bytes</td>
+                                <td>1a76437d334b84db6bbc8551d3b8b0d9c08fb58cf9c5dafa66c67801f55b0b3f</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.10/android-studio-ide-173.4580418-mac.zip">android-studio-ide-173.4580418-mac.dmg</a>
+                                </td>
+                                <td>897201582 bytes</td>
+                                <td>c3a081985d5667e8bee8e7d99e8cb996787f5d8b4829956cbdda8682b2705345</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.10/android-studio-ide-173.4580418-linux.zip">android-studio-ide-173.4580418-linux.zip</a>
+                                </td>
+                                <td>896525797 bytes</td>
+                                <td>6cca4e55179065c859f1c30582cc5dddac8ff9871b5fa37539382c83fddaa668</td>
+                            </tr>
                             <!-- 3.2 Canary 1 -->
                             <tr>
                                 <td rowspan="5">3.2 Canary 1</td>
