Add Android Studio 3.2 Canary 3 link

--- a/index.html
+++ b/index.html
@@ -343,6 +343,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.2 Canary 3 -->
+                            <tr>
+                                <td rowspan="5">3.2 Canary 3</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.2/android-studio-ide-173.4595177-windows.zip">android-studio-ide-173.4595177-windows.zip</a>
+                                </td>
+                                <td>964433194 bytes</td>
+                                <td>fb30c2c4f1334a16de4b6406c29a0173a276a700607d2b2d1cca2b971bf2a112</td>
+                                <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tKfTcly1fobimqe5gnj31kw0gw0yt.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.2/android-studio-ide-173.4595177-windows32.zip">android-studio-ide-173.4595177-windows32.zip</a>
+                                </td>
+                                <td>963903697 bytes</td>
+                                <td>05b31b65b9a9084d969435ec2b124641fc3853c411ff50896a44c551319a7982</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.2/android-studio-ide-173.4595177-mac.zip">android-studio-ide-173.4595177-mac.dmg</a>
+                                </td>
+                                <td>955507345 bytes</td>
+                                <td>302cfd63d7bd11616e9a64e7b439846f7de77ab722c84bccc5b83d7626e6e484</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.2/android-studio-ide-173.4595177-linux.zip">android-studio-ide-173.4595177-linux.zip</a>
+                                </td>
+                                <td>970023114 bytes</td>
+                                <td>f8ca7750d42705c43e2a86bc0c06dc2149d463b8caae347593cd9bca0b6d898d</td>
+                            </tr>
                             <!-- 3.2 Canary 2 -->
                             <tr>
                                 <td rowspan="5">3.2 Canary 2</td>
