Add Android Studio 3.1 Beta 3 link

--- a/index.html
+++ b/index.html
@@ -343,6 +343,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.1 Beta 3 -->
+                            <tr>
+                                <td rowspan="5">3.1 Beta 3</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.11/android-studio-ide-173.4595152-windows.zip">android-studio-ide-173.4595152-windows.zip</a>
+                                </td>
+                                <td>898143890 bytes</td>
+                                <td>9aef89e8d00c3d65c65fa91509bb7004d447b1217b0fde9b606240b41f376a55</td>
+                                <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tNc79ly1fonchvkg5wj31kw0h7n3e.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.11/android-studio-ide-173.4595152-windows32.zip">android-studio-ide-173.4595152-windows32.zip</a>
+                                </td>
+                                <td>897614393 bytes</td>
+                                <td>c662381f2087cea885e0ec9a3fc164ffd4f49452da17f7fc732bb4763b9cab3d</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.11/android-studio-ide-173.4595152-mac.zip">android-studio-ide-173.4595152-mac.dmg</a>
+                                </td>
+                                <td>897201388 bytes</td>
+                                <td>88e5decff39e8f17112f599ec0941e7944ee7752bb0d61ec1dfe07b548088d06</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.11/android-studio-ide-173.4595152-linux.zip">android-studio-ide-173.4595152-linux.zip</a>
+                                </td>
+                                <td>896525644 bytes</td>
+                                <td>9d1b5cdb9b3a09afd8f4dabb5882d343e096519d02d826d4e87d56e2f27b0604</td>
+                            </tr>
                             <!-- 3.2 Canary 3 -->
                             <tr>
                                 <td rowspan="5">3.2 Canary 3</td>
