Add Android Stuido 3.1 Beta 4 and 3.2 Canary 4 link

--- a/index.html
+++ b/index.html
@@ -343,6 +343,76 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.2 Canary 4 -->
+                            <tr>
+                                <td rowspan="5">3.2 Canary 4</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.3/android-studio-ide-173.4615518-windows.zip">android-studio-ide-173.4615518-windows.zip</a>
+                                </td>
+                                <td>966011850 bytes</td>
+                                <td>445b5ad33836f57246c51faa68e31fc5d77b188dc2dff3dc7d6c59522c9effca</td>
+                                <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tKfTcly1fora73c8mkj31kw0jf45e.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.3/android-studio-ide-173.4615518-windows32.zip">android-studio-ide-173.4615518-windows32.zip</a>
+                                </td>
+                                <td>965482353 bytes</td>
+                                <td>6132e5d5166081c848c7f81e71b538ac09fccd6e21c6a860b1ec02462e1bb54b</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.3/android-studio-ide-173.4615518-mac.zip">android-studio-ide-173.4615518-mac.dmg</a>
+                                </td>
+                                <td>957251455 bytes</td>
+                                <td>b6d399ee758f404b2d183ea3aafba631ee5dadb07b032f7772faae7fbe3d1f74</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.3/android-studio-ide-173.4615518-linux.zip">android-studio-ide-173.4615518-linux.zip</a>
+                                </td>
+                                <td>971670393 bytes</td>
+                                <td>84cd417969170586e65f077f87d51d28c317c06429cc7bd32c3435416ab963de</td>
+                            </tr>
+                            <!-- 3.1 Beta 4 -->
+                            <tr>
+                                <td rowspan="5">3.1 Beta 4</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.12/android-studio-ide-173.4615496-windows.zip">android-studio-ide-173.4615496-windows.zip</a>
+                                </td>
+                                <td>898142254 bytes</td>
+                                <td>4204203486fcf22f2d837436cead0fa2fa8bfdfdc4898e90b1498e0a4c0d2c78</td>
+                                <td rowspan="5"><a href="https://ws4.sinaimg.cn/large/006tKfTcly1fora324al2j31kw0gu0yw.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.12/android-studio-ide-173.4615496-windows32.zip">android-studio-ide-173.4615496-windows32.zip</a>
+                                </td>
+                                <td>897612757 bytes</td>
+                                <td>945dd8a205cb52548f6fcd8c991f4a5ca90acc2451bf83bfc8147a256c12f04e</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.12/android-studio-ide-173.4615496-mac.zip">android-studio-ide-173.4615496-mac.dmg</a>
+                                </td>
+                                <td>897199791 bytes</td>
+                                <td>c99db1858f9e524ac83f863258297a0f890f55cdaaa669a712f417bedfe4cd74</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.12/android-studio-ide-173.4615496-linux.zip">android-studio-ide-173.4615496-linux.zip</a>
+                                </td>
+                                <td>896524016 bytes</td>
+                                <td>e2780a02bc50f9e9fa824bf7262ae72b7277ede776379f636ef36c0ecbdbe066</td>
+                            </tr>
                             <!-- 3.1 Beta 3 -->
                             <tr>
                                 <td rowspan="5">3.1 Beta 3</td>
