Add Android P to Banner

--- a/index.html
+++ b/index.html
@@ -224,11 +224,19 @@
 
     <div class="banner has-dots" id="ad-banner-list">
         <ul>
+            <li style="background-image: url(https://ws2.sinaimg.cn/large/006tNc79ly1fp57koe5ovj31kw0kx439.jpg); width: 25%;" data-link="https://developer.android.google.cn/preview/index.html?utm_source=androiddevtools_banner&amp;utm_medium=website" data-tag="Android-P-li"
+                data-event-type="click">
+                <div class="inner">
+                    <h1></h1>
+                    <p style="color: darkgray"></p>
+                    <a class="btn" href="https://developer.android.google.cn/preview/index.html?utm_source=androiddevtools_banner&amp;utm_medium=website" onclick="trackOutboundLink('hhttps://developer.android.google.cn/preview/index.html', 'Android-P-Page', 'click');" title="">去看看</a>
+                </div>
+            </li>
             <li style="background-image: url(https://ws4.sinaimg.cn/large/006tNc79ly1fitrz88tc8j31jk0goq71.jpg); width: 25%;" data-link="http://www.androidweekly.cn/android-oreo-dev-post-page/?utm_source=androiddevtools_banner&amp;utm_medium=website" data-tag="Android-Oreo-Weixin-li"
                 data-event-type="click">
                 <div class="inner">
                     <h1>Android Oreo</h1>
-                    <p style="color: darkgray">🍪奥利奥🍪</p>
+                    <p style="color: darkgray">奥利奥</p>
                     <a class="btn" href="http://www.androidweekly.cn/android-oreo-dev-post-page/?utm_source=androiddevtools_banner&amp;utm_medium=website" onclick="trackOutboundLink('http://www.androidweekly.cn/android-oreo-dev-post-page/', 'Android-Oreo-Post-Page', 'click');"
                         title="">去尝尝</a>
                 </div>
