Add Android Studio 3.1 RC1 link

--- a/index.html
+++ b/index.html
@@ -351,6 +351,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.1 RC1 -->
+                            <tr>
+                                <td rowspan="5">3.1 RC1</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.13/android-studio-ide-173.4625007-windows.zip">android-studio-ide-173.4625007-windows.zip</a>
+                                </td>
+                                <td>889502434 bytes</td>
+                                <td>f96029ab0d0a74f5a66bfd693799ad540565e428c1a8ad887a5ec8fe8d0dfd3e</td>
+                                <td rowspan="5"><a href="https://ws4.sinaimg.cn/large/006tNc79ly1fpax638nj8j314e0amgo7.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.13/android-studio-ide-173.4625007-windows32.zip">android-studio-ide-173.4625007-windows32.zip</a>
+                                </td>
+                                <td>888972937 bytes</td>
+                                <td>97a979f6c05ba1d4c7f9aaef104bbef11c3def325cf24f3e2cb9ab5d11abac8b</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.13/android-studio-ide-173.4625007-mac.zip">android-studio-ide-173.4625007-mac.dmg</a>
+                                </td>
+                                <td>888163202 bytes</td>
+                                <td>efbe1d001d1208f2703cceaa540d87fcd12c0e3ae6713671f3f65da75936e684</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.13/android-studio-ide-173.4625007-linux.zip">android-studio-ide-173.4625007-linux.zip</a>
+                                </td>
+                                <td>887884220 bytes</td>
+                                <td>4803bd3e2e75c0365a91ab2233ba2b2146c7864545104549f292df6ab1e51bfd</td>
+                            </tr>
                             <!-- 3.2 Canary 4 -->
                             <tr>
                                 <td rowspan="5">3.2 Canary 4</td>
