Add Android Studio 3.2 Canary 5 link

--- a/index.html
+++ b/index.html
@@ -351,6 +351,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.2 Canary 5 -->
+                            <tr>
+                                <td rowspan="5">3.2 Canary 5</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.4/android-studio-ide-173.4630681-windows.zip">android-studio-ide-173.4630681-windows.zip</a>
+                                </td>
+                                <td>1015484084 bytes</td>
+                                <td>bdaa2fdbbdda628d4e4c5c5a56940e17c8f309b3ea4642da8825bfe0ca7e5f26</td>
+                                <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tNc79ly1fpaxafqz44j314b0a5go4.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.4/android-studio-ide-173.4630681-windows32.zip">android-studio-ide-173.4630681-windows32.zip</a>
+                                </td>
+                                <td>1014956295 bytes</td>
+                                <td>e560578c6569f9b1d4ba96e7538730ebb2a2731dbbb400fab0305351e9087296</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.4/android-studio-ide-173.4630681-mac.zip">android-studio-ide-173.4630681-mac.dmg</a>
+                                </td>
+                                <td>959374497 bytes</td>
+                                <td>a77aa75065d38d91a549278a8dc23e52ddbb62bf145bfe3c8caebb24f200c653</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.4/android-studio-ide-173.4630681-linux.zip">android-studio-ide-173.4630681-linux.zip</a>
+                                </td>
+                                <td>973924691 bytes</td>
+                                <td>31fbf89ccf3f878ad5b1f87310c2f8587cd0d1314f794b3a9a3ec23605d118d8</td>
+                            </tr>
                             <!-- 3.1 RC1 -->
                             <tr>
                                 <td rowspan="5">3.1 RC1</td>
