Add Android Studio 3.1 RC2 link

--- a/index.html
+++ b/index.html
@@ -351,6 +351,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.1 RC2 -->
+                            <tr>
+                                <td rowspan="5">3.1 RC2</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.14/android-studio-ide-173.4640767-windows.zip">android-studio-ide-173.4640767-windows.zip</a>
+                                </td>
+                                <td> bytes</td>
+                                <td>7ddea12e0fe51d80b08e918f6472691974184861fba009b3ab811c8b600c51e9</td>
+                                <td rowspan="5"><a href="https://ws4.sinaimg.cn/large/006tNc79ly1fpaxh5cwqij31630acwh0.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.14/android-studio-ide-173.4640767-windows32.zip">android-studio-ide-173.4640767-windows32.zip</a>
+                                </td>
+                                <td> bytes</td>
+                                <td>d69c47b27676635304cd6c9ec4b954d986cafd651d0a1ae26c1aa10f22b8e64c</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.14/android-studio-ide-173.4640767-mac.zip">android-studio-ide-173.4640767-mac.dmg</a>
+                                </td>
+                                <td> bytes</td>
+                                <td>50e889f8206565562a240dc3635272a8fcaa821f49daf39e078f9ba6f207b912</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.14/android-studio-ide-173.4640767-linux.zip">android-studio-ide-173.4640767-linux.zip</a>
+                                </td>
+                                <td> bytes</td>
+                                <td>a8c5d7fea5120ea65977b522c9fdb866ab127c7209a5f4c20ea34aa2e3c26803</td>
+                            </tr>
                             <!-- 3.2 Canary 5 -->
                             <tr>
                                 <td rowspan="5">3.2 Canary 5</td>
